--- a/deployment/pingpong/templates/service.yaml
+++ b/deployment/pingpong/templates/service.yaml
@@ -7,11 +7,11 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: 8443
-    targetPort: 8443
+  - port: {{ .Values.service.externalGrpcPort }}
+    targetPort: grpc
     name: grpc
-  - port: 8080
-    targetPort: 8080
-    name: http
+  - port: {{ .Values.service.externalHealthPort }}
+    targetPort: health
+    name: health
   selector:
     app: {{ template "fullname" . }}
