--- a/deployment/pingpong/values.yaml
+++ b/deployment/pingpong/values.yaml
@@ -1,6 +1,4 @@
-# Default values for testchart.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Default values for pingpong.
 replicaCount: 1
 image:
   repository: quay.io/scardiecat/styx-grpc-pingpong
@@ -9,8 +7,8 @@ image:
 service:
   name: styx-grpc-pingpong
   type: ClusterIP
-  externalGrpcPort: 8443  
-  internalGrpcPort: 8443
+  externalGrpcPort: 8443
+  externalHealthPort: 8080
 resources:
   limits:
     cpu: 100m
