--- a/deployment/styx-grpc-pingpong/templates/service.yaml
+++ b/deployment/styx-grpc-pingpong/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    heritage: {{.Release.Service | quote }}
+    release: {{.Release.Name | quote }}
 spec:
   type: {{ .Values.service.type }}
   ports:
