--- a/deployment/styx-grpc-pingpong/Chart.yaml.in
+++ b/deployment/styx-grpc-pingpong/Chart.yaml.in
@@ -1,4 +1,4 @@
 apiVersion: v1
 description: styx-grpc-pingpong chart
 name: styx-grpc-pingpong
-version: {{ .tag}}
+version: {{ .svermakerBuildVersion}}
