--- a/deployment/styx-grpc-pingpong/templates/deployment.yaml
+++ b/deployment/styx-grpc-pingpong/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: "{{ .Chart.Name }}-{{ .Values.label.sverlabel }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   template:
